---
source: tests/bundle.rs
expression: main
---
local __DARKLUA_BUNDLE_MODULES={}do local function initialize()
end

__DARKLUA_BUNDLE_MODULES.a=initialize
end do
local function generateNumber()
    return math.random(1, 9999)
end

__DARKLUA_BUNDLE_MODULES.b={
    zero = 0,
    one = 1,
    hex = 0x10,
    binary = 0b1010,
    number1 = generateNumber(),
    number2 = generateNumber(),
    number3 = generateNumber(),
}
end do
local function format(value)
    return '[' .. tostring(value) .. ']'
end

__DARKLUA_BUNDLE_MODULES.c=format -- comment after returning format function
end
local initialize = __DARKLUA_BUNDLE_MODULES.a -- import initialize module

local value = __DARKLUA_BUNDLE_MODULES.b -- import value module

local format = __DARKLUA_BUNDLE_MODULES.c --[[ import format module ]]

print(format(value.number1 + value.number2))

